--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,47 @@
-#root {
-  max-width: 1280px;
+:root {
+  --color-accent: #f4ac45;
+  --color-accent-1: #694a38;
+  --color-black: #222;
+
+  --font: 'Montserrat', sans-serif;
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  font-family: var(--font);
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  background-color: #fff4e3;
+}
+
+body {
+  line-height: 1.6;
+}
+
+.container {
+  width: 90rem;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+  display: flex;
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+a,
+a:visited,
+a:active {
+  text-decoration: none;
+  color: black;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media all and (max-width: 56.25em) {
+  .container {
+    width: 90vw;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
